fixed scrollbar styling in sidebar

--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,18 @@
   --sidebar-ring: oklch(0.645 0.246 16.439);
 }
 
+::-webkit-scrollbar {
+  @apply w-2.5 h-2.5;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply rounded-full bg-border border-[1px] border-transparent border-solid bg-clip-padding;
+}
+
 @layer base {
   * {
     @apply border-border outline-ring/50;
